# physics-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/common/: constants.hpp  math.cpp  math.hpp  utils.cpp  utils.hpp
src/core/: constraint.cpp  constraint.hpp  entity.cpp  entity.hpp  object.cpp  object.hpp  scene.cpp  scene.hpp  simulation.cpp  simulation.hpp
